# NeuraCraft

./: .gitignore  CMakeLists.txt  Layer.cpp  Main.cpp  Matrix.cpp  README.md  build_and_run.sh
.github/workflows/: c-cpp.yml
Includes/: Layer.h  Matrix.h
src/: Layer.cpp  Main.cpp
